# apple-mail-cli

./: .gitignore  README.md  pyproject.toml
skills/apple-mail-cli/: RECIPES.md  SKILL.md
src/aml/: __init__.py  cli.py  envelope.py  errors.py  timeparse.py  toon.py
src/aml/cal/: commands.py  store.py
src/aml/mail/: commands.py  index.py  store.py
src/apple_mail/: __init__.py  cli.py  envelope.py  errors.py  toon.py
src/apple_mail/cal/: __init__.py  commands.py  store.py
src/apple_mail/mail/: __init__.py  commands.py  emlx.py  index.py  store.py
tests/: test_cal.py  test_emlx.py  test_envelope.py  test_timeparse.py  test_toon.py
